# spell-checker

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: action.yml
assets/: common  latin_abbrev  std_lib_names  tech_words
examples/: 1.py
spell/: checker.py  config.py  main.py  parser.py  types.py  utils.py  walker.py
tests/: test_comments.py
tests/data/: file1.py
