[project]
name = "spell-checker"
version = "0.0.2"
authors = [
    {name = "Charles Patel", email = "charlespatel007@yahoo.com"},
]
description = "A typo checker in docstrings and inline comments"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["textblob==0.17.1"]

[project.optional-dependencies]
dev = [
    "bandit==1.7.4",
    "black==22.8.0",
    "flake8==5.0.4",
    "isort==5.10.1",
    "mypy==0.982",
    "pytest==7.1.3",
    "safety==1.9.0",
    "toml==0.10.1",
]

[project.scripts]
spell = "spell.main:main"

[tool.black]
line-length = 110
target_version = ["py310"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git/         # root of the project
    | \.mypy_cache/
    | \.egg-info
    | build
    | __pycache__
  )
)
'''

[tool.isort]
profile = "black"
line_length = 110
combine_as_imports = true
multi_line_output = "VERTICAL_HANGING_INDENT"

[tool.mypy]
python_version = "3.10"
namespace_packages = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
implicit_reexport = false
