[metadata]
name = spell-checker
version = 0.0.1
url = TBD
author = Charles Patel
author_email = charlespatel007@yahoo.com

[options]
include_package_data = true
python_requires = >=3.10

[isort]
profile = black
line_length = 110
combine_as_imports = true
multi_line_output = VERTICAL_HANGING_INDENT

[mypy]
python_version = 3.10
namespace_packages = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
strict_equality = True
implicit_reexport = False

[flake8]
select = F
